--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.ft</groupId>
     <artifactId>ussd-api</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-PROXY</version>
     <packaging>jar</packaging>
     <name>Ussd Api</name>
 
